2020-03-02  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/funcall-vararg-1.pk: Split from
	funcall-vararg.pk
	* testsuite/poke.pkl/funcall-vararg-6.pk: Likewise.
	* testsuite/poke.pkl/funcall-vararg-5.pk: Likewise.
	* testsuite/poke.pkl/funcall-vararg-4.pk: Likewise.
	* testsuite/poke.pkl/funcall-vararg-3.pk: Likewise.
	* testsuite/poke.pkl/funcall-vararg-2.pk: Likewise.

2020-03-02  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/arrays-10.pk: s/catched/caught.
	* testsuite/poke.map/maps-unions-3.pk: Likewise.
	* testsuite/poke.map/maps-uint-diag-1.pk: Likewise.
	* testsuite/poke.map/maps-structs-constraints-1.pk: Likewise.
	* testsuite/poke.map/maps-strings-diag-4.pk: Likewise.
	* testsuite/poke.map/maps-strings-diag-2.pk: Likewise.
	* testsuite/poke.map/maps-strings-diag-1.pk: Likewise.
	* testsuite/poke.map/maps-simple-9.pk: Likewise.
	* testsuite/poke.map/maps-arrays-11.pk: Likewise.
	* testsuite/poke.map/maps-arrays-3.pk: Likewise.
	* testsuite/poke.pkl/try-until-3.pk: Likewise.
	* testsuite/poke.pkl/try-catch-diag-3.pk: Likewise.
	* testsuite/poke.pkl/try-catch-7.pk: Likewise.
	* testsuite/poke.pkl/try-catch-6.pk: Likewise.
	* testsuite/poke.pkl/trim-15.pk: Likewise.
	* testsuite/poke.pkl/trim-14.pk: Likewise.
	* testsuite/poke.pkl/trim-13.pk: Likewise.
	* testsuite/poke.pkl/trim-12.pk: Likewise.
	* testsuite/poke.pkl/trim-11.pk: Likewise.
	* testsuite/poke.pkl/sl-integers-12.pk: Likewise.
	* testsuite/poke.pkl/sl-integers-11.pk: Likewise.
	* testsuite/poke.pkl/sl-integers-10.pk: Likewise.
	* testsuite/poke.pkl/sl-integers-9.pk: Likewise.
	* testsuite/poke.pkl/sl-integers-6.pk: Likewise.
	* testsuite/poke.pkl/sl-integers-5.pk: Likewise.
	* testsuite/poke.pkl/promo-array-return-diag-2.pk: Likewise.
	* testsuite/poke.pkl/promo-array-arg-diag-7.pk: Likewise.
	* testsuite/poke.pkl/promo-array-arg-diag-4.pk: Likewise.
	* testsuite/poke.pkl/promo-array-arg-diag-3.pk: Likewise.
	* testsuite/poke.pkl/promo-array-arg-diag-2.pk: Likewise.